--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "@mui/lab": "^5.0.0-alpha.131",
     "@mui/material": "^5.12.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "axios": "^1.3.6",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.8.0",
+    "axios": "^1.7.7",
     "dotenv": "^16.1.3",
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
